Fixed css on small screens on home page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -74,3 +74,26 @@ footer {
   background-attachment: fixed;
 }
 
+.hero {
+  height: 500px;
+}
+
+.features {
+  height: 500px;
+}
+
+@media (max-width: 768px) {
+  .hero {
+    height: 400px;
+  }
+
+  .features {
+    height: 800px;
+  }
+}
+
+@media (max-width: 576px) {
+  .features {
+    height: 1000px;
+  }
+}
